# sigtool

./: CMakeLists.txt  Makefile  README.md  bundle.cpp  bundle.h  codesign.cpp  commands.cpp  commands.h  der.cpp  der.h  hash.cpp  hash.h  macho.cpp  macho.h  magic_numbers.h  main.cpp  plist.cpp  plist.h  resources.cpp  resources.h  signature.cpp  signature.h
test/: entitlements.plist  test.sh
